# cmake-test-tooling

./: .gitignore
10_UnitTest/: CMakeLists.txt
10_UnitTest/cmake/: Docs.cmake
10_UnitTest/configured/: config.hpp.in
10_UnitTest/src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.hpp
10_UnitTest/tests/: CMakeLists.txt  main.cc
1_HelloWorld/: CMakeLists.txt  main.c
2_BasicProject/: CMakeLists.txt  my_lib.c
3_IntermediateProject/: CMakeLists.txt
3_IntermediateProject/app/: CMakeLists.txt
4_VariablesOptions/: CMakeLists.txt
4_VariablesOptions/app/: main.c
4_VariablesOptions/src/my_lib/: my_lib.h
5_ConfigureFile/: CMakeLists.txt
5_ConfigureFile/app/: CMakeLists.txt
5_ConfigureFile/configured/: CMakeLists.txt
5_ConfigureFile/src/my_lib/: CMakeLists.txt
6_SourcesAndHeaders/app/: CMakeLists.txt  main.c
6_SourcesAndHeaders/src/my_lib/: CMakeLists.txt
7_ExternalGit/: CMakeLists.txt
7_ExternalGit/app/: CMakeLists.txt  main.cc
7_ExternalGit/cmake/: AddGitSubmodule.cmake
7_ExternalGit/src/my_lib/: CMakeLists.txt  my_lib.cc
8_FetchContent/: CMakeLists.txt
8_FetchContent/app/: main.cc
8_FetchContent/src/my_lib/: my_lib.cc
9_Doxygen/configured/: CMakeLists.txt
